log
Thu, May 15, 2025  2:34:56 PM: 
 sudoku.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
Compilation failed
In file included from test.c:5:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:60:13: error: implicit declaration of function 'pushback'; did you mean 'pushBack'? [-Wimplicit-function-declaration]
   60 |             pushback(list, new);
      |             ^~~~~~~~
      |             pushBack
test.c: At top level:
test.c:7:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
3f0e54c
Thu, May 15, 2025  2:35:03 PM: 
Compilation failed
In file included from test.c:5:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:60:13: error: implicit declaration of function 'pushback'; did you mean 'pushBack'? [-Wimplicit-function-declaration]
   60 |             pushback(list, new);
      |             ^~~~~~~~
      |             pushBack
test.c: At top level:
test.c:7:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
e03220c
Thu, May 15, 2025  2:35:18 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
test.c:7:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
eedf188
